--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "appBrancoComNavigati",
+    "name": "CloneXbox",
     "slug": "appBrancoComNavigati",
     "version": "1.0.0",
     "orientation": "portrait",
@@ -23,7 +23,12 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
-      }
+        
+      },
+      "package": "com.yourcompany.CloneXbox",
+      "versionCode": 1
+      
+      
     },
     "web": {
       "favicon": "./assets/favicon.png"
